k8s/services/mail/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopno-mail
  labels:
    name: shopno-mail
    app.kubernetes.io/name: mail
