k8s/services/mail/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service
  namespace: shopno-mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-service
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      containers:
      - name: mail-service
        image: ghcr.io/asaduzzamanbheramara-prog/shopnoltd/mail-service:5ae42a1ed4dd86847ef5c3bffe98d4a069935917
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
