k8s/services/mail/roundcube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcube
  namespace: shopno-mail
  labels:
    app: roundcube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roundcube
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: roundcube
    spec:
      containers:
        - name: roundcube
          image: roundcube/roundcubemail:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: roundcube-data
              mountPath: /var/roundcube/db
      volumes:
        - name: roundcube-data
          persistentVolumeClaim:
            claimName: roundcube-data
