k8s/services/mail/roundcube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roundcube
  namespace: shopno-mail
spec:
  selector:
    app: roundcube
  ports:
    - name: http
      port: 80
      targetPort: http
