k8s/services/mail/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mail-service
  namespace: shopno-mail
spec:
  ingressClassName: nginx
  rules:
    - host: mail-api.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mail-service
                port:
                  number: 80
